# tf2-subclass-creator

./: README.md
backend/: .gitignore  README.md  package.json  tsconfig.json
backend/auth_proto/: index.js  package.json
backend/src/: accessControl.ts  database.ts  errors.ts  index.ts
backend/src/controllers/: loadouts.ts  users.ts  weapons.ts
backend/src/models/: loadout.ts  user.ts  weapon.ts
backend/src/routes/: loadouts.ts  users.ts  weapons.ts
backend/src/scripts/: .gitignore  add_spy_watches.ts  helpers.ts  save_all_items.ts  save_weapons.ts  spy_watches.json  upload_weapons.ts  weapons.json
backend/tests/: auth.http  loadouts_mixed.http  loadouts_post_get.http  weapons.http
frontend/: .gitignore  Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: custom-theme.scss  index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  utils.ts
frontend/src/app/interfaces/: loadout.ts  user.ts  weapon.ts
frontend/src/app/misc/: adminGuard.ts
frontend/src/app/services/: favs.service.spec.ts  favs.service.ts  loadout.service.spec.ts  loadout.service.ts  users.service.spec.ts  users.service.ts  weapon.service.spec.ts  weapon.service.ts
frontend/src/environments/: environment.development.ts  environment.ts
lambdas/: .gitignore  Cargo.toml  tests.http
lambdas/add_fav/: Cargo.toml  README.md
lambdas/add_fav/src/: http_handler.rs
lambdas/tf2sc_auth/: Cargo.toml  README.md
lambdas/tf2sc_auth/src/: main.rs
(+47 files in other folders)
