[package]
name = "add_fav"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
reqwest = { version = "0.12.15", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }
serde_json = "1.0.140"
futures-util = "0.3"
